# taiwan-geodoc-hub-storage

./: .env.example  .env.test.example  .gitignore  Makefile  conftest.py  pyproject.toml
src/: main.py
src/taiwan_geodoc_hub/entrypoints/cli/: __init__.py
src/taiwan_geodoc_hub/entrypoints/cli/auth/: __init__.py  login.py
src/taiwan_geodoc_hub/entrypoints/http/starlette/: __init__.py
src/taiwan_geodoc_hub/entrypoints/http/vellox/: __init__.py
src/taiwan_geodoc_hub/infrastructure/: lifespan.py
src/taiwan_geodoc_hub/infrastructure/adapters/firestore/: ocr_result_adapter.py  process_manager_adapter.py  registration_adapter.py  role_adapter.py  snapshot_adapter.py  tenant_adapter.py  tenant_daily_usage_adapter.py
src/taiwan_geodoc_hub/infrastructure/adapters/http/: meilisearch.py  ocr_space.py
src/taiwan_geodoc_hub/infrastructure/adapters/pubsub/: event_publisher.py
src/taiwan_geodoc_hub/infrastructure/constants/: collections.py  tokens.py  types.py
src/taiwan_geodoc_hub/infrastructure/types/: index.py  task.py
src/taiwan_geodoc_hub/infrastructure/utils/classes/: bloc.py
src/taiwan_geodoc_hub/infrastructure/utils/firebase/: ensure_topics.py
src/taiwan_geodoc_hub/infrastructure/utils/hashers/: bytes_hasher.py
src/taiwan_geodoc_hub/modules/access_managing/: access_managing_module.py
src/taiwan_geodoc_hub/modules/registration_managing/: registration_managing_module.py
src/taiwan_geodoc_hub/modules/system_maintaining/: system_maintaining_module.py
tests/: conftest.py
tests/e2e/: test_registration_managing.py
tests/integration/: test_role_dao.py
(+38 files in other folders)
